# ai-agent

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/prescription_workflow/: crew.py  main.py
src/prescription_workflow/config/: agents.yaml  tasks.yaml
src/prescription_workflow/tools/: db_tool.py  email_tool.py
tests/: extracted_prescriptions.json
