[project]
name = "prescription_workflow"
version = "0.1.0"
description = "Prescription_workflow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
prescription_workflow = "prescription_workflow.main:run"
run_crew = "prescription_workflow.main:run"
train = "prescription_workflow.main:train"
replay = "prescription_workflow.main:replay"
test = "prescription_workflow.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
